--- a/MaterialThemeBuilder/app/src/main/res/values/type.xml
+++ b/MaterialThemeBuilder/app/src/main/res/values/type.xml
@@ -14,7 +14,7 @@
 ~ limitations under the License.
 -->
 
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
 
     <!--Typography-->
 
@@ -38,55 +38,68 @@
     <!--applied globally across your app.-->
 
     <style name="TextAppearance.MyTheme.Headline1" parent="TextAppearance.MaterialComponents.Headline1">
-        <!--Your custom type style here-->
+        <item name="fontFamily">@font/redhat</item>
+        <item name="android:textFontWeight" tools:ignore="NewApi">700</item>
     </style>
 
     <style name="TextAppearance.MyTheme.Headline2" parent="TextAppearance.MaterialComponents.Headline2">
-        <!--Your custom type style here-->
+        <item name="fontFamily">@font/redhat</item>
+        <item name="android:textFontWeight" tools:ignore="NewApi">700</item>
     </style>
 
     <style name="TextAppearance.MyTheme.Headline3" parent="TextAppearance.MaterialComponents.Headline3">
-        <!--Your custom type style here-->
+        <item name="fontFamily">@font/redhat</item>
+        <item name="android:textFontWeight" tools:ignore="NewApi">700</item>
     </style>
 
     <style name="TextAppearance.MyTheme.Headline4" parent="TextAppearance.MaterialComponents.Headline4">
-        <!--Your custom type style here-->
+        <item name="fontFamily">@font/redhat</item>
+        <item name="android:textFontWeight" tools:ignore="NewApi">700</item>
     </style>
 
     <style name="TextAppearance.MyTheme.Headline5" parent="TextAppearance.MaterialComponents.Headline5">
-        <!--Your custom type style here-->
+        <item name="fontFamily">@font/redhat</item>
+        <item name="android:textFontWeight" tools:ignore="NewApi">700</item>
     </style>
 
     <style name="TextAppearance.MyTheme.Headline6" parent="TextAppearance.MaterialComponents.Headline6">
-        <!--Your custom type style here-->
+        <item name="fontFamily">@font/redhat</item>
+        <item name="android:textFontWeight" tools:ignore="NewApi">700</item>
     </style>
 
     <style name="TextAppearance.MyTheme.Subtitle1" parent="TextAppearance.MaterialComponents.Subtitle1">
-        <!--Your custom type style here-->
+        <item name="fontFamily">@font/redhat</item>
+        <item name="android:textFontWeight" tools:ignore="NewApi">500</item>
     </style>
 
     <style name="TextAppearance.MyTheme.Subtitle2" parent="TextAppearance.MaterialComponents.Subtitle2">
-        <!--Your custom type style here-->
+        <item name="fontFamily">@font/redhat</item>
+        <item name="android:textFontWeight" tools:ignore="NewApi">500</item>
     </style>
 
     <style name="TextAppearance.MyTheme.Body1" parent="TextAppearance.MaterialComponents.Body1">
-        <!--Your custom type style here-->
+        <item name="fontFamily">@font/redhat</item>
+        <item name="android:textFontWeight" tools:ignore="NewApi">400</item>
     </style>
 
     <style name="TextAppearance.MyTheme.Body2" parent="TextAppearance.MaterialComponents.Body2">
-        <!--Your custom type style here-->
+        <item name="fontFamily">@font/redhat</item>
+        <item name="android:textFontWeight" tools:ignore="NewApi">400</item>
     </style>
 
     <style name="TextAppearance.MyTheme.Button" parent="TextAppearance.MaterialComponents.Button">
-        <!--Your custom type style here-->
+        <item name="fontFamily">@font/redhat</item>
+        <item name="android:textFontWeight" tools:ignore="NewApi">700</item>
     </style>
 
     <style name="TextAppearance.MyTheme.Caption" parent="TextAppearance.MaterialComponents.Caption">
-        <!--Your custom type style here-->
+         <item name="fontFamily">@font/redhat</item>
+         <item name="android:textFontWeight" tools:ignore="NewApi">700</item>
     </style>
 
     <style name="TextAppearance.MyTheme.Overline" parent="TextAppearance.MaterialComponents.Overline">
-        <!--Your custom type style here-->
+        <item name="fontFamily">@font/redhat</item>
+        <item name="android:textFontWeight" tools:ignore="NewApi">700</item>
     </style>
 
 </resources>
