--- a/MaterialThemeBuilder/app/src/main/res/layout/component_tabs.xml
+++ b/MaterialThemeBuilder/app/src/main/res/layout/component_tabs.xml
@@ -61,6 +61,12 @@
           android:layout_height="wrap_content"
           android:text="@string/text_button" />
 
+        <com.google.android.material.tabs.TabItem
+            android:id="@+id/tab_four"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="test-knopka" />
+
     </com.google.android.material.tabs.TabLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
