material cards buttons

--- a/MaterialThemeBuilder/app/src/main/res/values-night/themes.xml
+++ b/MaterialThemeBuilder/app/src/main/res/values-night/themes.xml
@@ -18,13 +18,13 @@
     <!--Top level DayNight theme to be used in AndroidManifest.xml-->
     <style name="Theme.MyApp" parent="Base.Theme.MyApp">
         <!--Material color attributes (dark theme) -->
-        <item name="colorPrimary">@color/purple_200</item>
-        <item name="colorPrimaryVariant">@color/purple_600</item>
-        <item name="colorSecondary">@color/green_200</item>
-        <item name="colorSecondaryVariant">@color/green_500</item>
+        <item name="colorPrimary">@color/teal_200</item>
+        <item name="colorPrimaryVariant">@color/teal_600</item>
+        <item name="colorSecondary">@color/navy_300</item>
+        <item name="colorSecondaryVariant">@color/navy_600</item>
         <item name="android:colorBackground">@color/black_900</item>
         <item name="colorSurface">@color/black_800</item>
-        <item name="colorError">@color/red_200</item>
+        <item name="colorError">@color/red_berry</item>
         <item name="colorOnPrimary">@color/black_900</item>
         <item name="colorOnSecondary">@color/black_900</item>
         <item name="colorOnBackground">@color/white_50</item>
