--- a/MaterialThemeBuilder/app/src/main/res/layout/component_user_card.xml
+++ b/MaterialThemeBuilder/app/src/main/res/layout/component_user_card.xml
@@ -27,7 +27,7 @@
                 app:layout_constraintEnd_toStartOf="@+id/guideline2"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/ic_baseline_insert_drive_file_24" />
+                app:srcCompat="@drawable/ic_baseline_person_24" />
 
             <ImageView
                 android:id="@+id/imageView3"
@@ -49,11 +49,12 @@
                 android:layout_marginBottom="8dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginTop="4dp"
-                android:text="Created: 20/11/21"
+
+                android:text="johnwick@agrello.com"
                 android:textAppearance="?attr/textAppearanceBody1"
                 android:textColor="@color/material_on_surface_emphasis_medium"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/imageView3"
+                app:layout_constraintEnd_toStartOf="@+id/status"
                 app:layout_constraintStart_toStartOf="@+id/guideline2"
                 app:layout_constraintTop_toBottomOf="@+id/textView" />
 
@@ -64,7 +65,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="8dp"
                 android:layout_marginTop="8dp"
-                android:text="My document"
+                android:text="John Wick"
                 android:textAppearance="?attr/textAppearanceSubtitle1"
                 android:textColor="@color/material_on_surface_emphasis_high_type"
                 app:layout_constraintBottom_toTopOf="@+id/textView3"
@@ -79,6 +80,16 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 app:layout_constraintGuide_begin="68dp" />
+
+            <com.google.android.material.chip.Chip
+                android:id="@+id/status"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="8dp"
+                android:text="some status"
+                app:layout_constraintBottom_toBottomOf="@+id/textView3"
+                app:layout_constraintEnd_toStartOf="@+id/imageView3"
+                app:layout_constraintTop_toTopOf="@+id/textView3" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
