--- a/MaterialThemeBuilder/app/src/main/res/layout/component_signature_card.xml
+++ b/MaterialThemeBuilder/app/src/main/res/layout/component_signature_card.xml
@@ -38,7 +38,7 @@
 
                 android:layout_marginEnd="8dp"
                 android:layout_marginTop="4dp"
-                android:text="johnwick@agrello.com"
+                android:text="Signed: 20/12/2020 7:45"
                 android:textAppearance="?attr/textAppearanceBody1"
                 android:textColor="@color/material_on_surface_emphasis_medium"
                 app:layout_constraintBottom_toBottomOf="parent"
